saving before trying to fix this godforsaken slideshow

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                     <li class="col-sm-6 thumbnailcol">
                                       <div class="fff">
                                         <div class="thumbnail">
-                                          <img src="images/gallery/before.jpg" alt="">
+                                          <img src="images/gallery/before2.jpg" alt="">
                                         </div>
                                         <div class="caption">
                                           <h4>Before</h4>
@@ -189,7 +189,7 @@
                                     <li class="col-sm-6 thumbnailcol">
                                       <div class="fff">
                                         <div class="thumbnail">
-                                          <img src="images/gallery/after.jpg" alt="">
+                                          <img src="images/gallery/after2.jpg" alt="">
                                         </div>
                                         <div class="caption">
                                           <h4>After</h4>
@@ -203,7 +203,7 @@
                                     <li class="col-sm-6 thumbnailcol">
                                       <div class="fff">
                                         <div class="thumbnail">
-                                          <img src="images/gallery/before.jpg" alt="">
+                                          <img src="images/gallery/before3.jpg" alt="">
                                         </div>
                                         <div class="caption">
                                           <h4>Before</h4>
@@ -213,7 +213,7 @@
                                     <li class="col-sm-6 thumbnailcol">
                                       <div class="fff">
                                         <div class="thumbnail">
-                                          <img src="images/gallery/after.jpg" alt="">
+                                          <img src="images/gallery/after3.jpg" alt="">
                                         </div>
                                         <div class="caption">
                                           <h4>After</h4>
@@ -232,7 +232,7 @@
                          <!-- /.control-box -->                          
                           </div><!-- /#myCarousel -->
                         </div>
-                      <div class="offset-top-0"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Call (800) 532-5447</a></div>
+                      <div class="offset-top-0"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">View More Before & Afters</a></div>
                     </div>
                   </div>
                   <div class="cell-xs-10 cell-md-4 col-md-4">
