--- a/index.html
+++ b/index.html
@@ -125,17 +125,17 @@
               </div>
               <div class="row offset-top-60">
                   <div class="cell-xs-10 text-md-left offset-top-20 offset-md-top-0 col-md-8">
-                    <div class="lighttransparent offset-top-20">
-                      <h5 class="text-primary">What We Can Do For You</h5>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-                      <ul>
-                        <li>Lorem Ipsum</li>
-                        <li>Proin Gravida</li>
-                        <li>Veil Elit</li>
-                        <li>Inceptos Quam</li>
-                        <li>Orci Enim</li>
-                      </ul>
-                      <div class="offset-top-0"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Call (800) 532-5447</a></div>
+                    <div class="lighttransparent womanbody offset-top-20">
+                        <h5 class="text-primary">What We Can Do For You</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+                        <ul>
+                          <li>Lorem Ipsum</li>
+                          <li>Proin Gravida</li>
+                          <li>Veil Elit</li>
+                          <li>Inceptos Quam</li>
+                          <li>Orci Enim</li>
+                        </ul>
+                        <div class="offset-top-0"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Call (800) 532-5447</a></div>
                     </div>     
                     <div class="lighttransparent offset-top-20">
                       <h5 class="text-primary">What We Can Do For You</h5>
@@ -232,7 +232,7 @@
                          <!-- /.control-box -->                          
                           </div><!-- /#myCarousel -->
                         </div>
-                      <div class="offset-top-0"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">View More Before & Afters</a></div>
+                      <div class="offset-top-0 slideshowbtn"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">View More Before & Afters</a></div>
                     </div>
                   </div>
                   <div class="cell-xs-10 cell-md-4 col-md-4">
@@ -246,18 +246,18 @@
                         </div>
                         <div class="form-group form-group-label-outside">
                           <p>Last Name*</p>      
-                          <input id="contacts-email" type="email" name="email" data-constraints="@Email @Required" class="form-control form-control-last-child"><span class="form-validation"></span>
+                          <input id="contacts-last-name" type="text" name="email" data-constraints="@Required" class="form-control form-control-last-child"><span class="form-validation"></span>
                         </div>
                         <div class="form-group form-group-label-outside">
                           <p>Email*</p>     
-                          <input id="contacts-last-name" type="text" name="last-name" data-constraints="@Required" class="form-control form-control-last-child"><span class="form-validation"></span>
+                          <input id="contacts-email" type="email" name="last-name" data-constraints="@Email @Required" class="form-control form-control-last-child"><span class="form-validation"></span>
                         </div>
                         <div class="form-group form-group-label-outside">
                           <p>Phone</p>      
-                          <input id="contacts-phone" type="text" name="last-name" data-constraints="@IsNumeric @Required" class="form-control form-control-last-child"><span class="form-validation"></span>
+                          <input id="contacts-phone" type="text" name="last-name" data-constraints="@IsNumeric" class="form-control form-control-last-child"><span class="form-validation"></span>
                         </div>
                         <div class="form-group form-group-label-outside">
-                          <label for="sel1">Select Procedure*</label>
+                          <p>Select Procedure*</p>  
                           <select class="form-control" id="sel1">
                             <option>Tummy Tuck</option>
                             <option>Liposuction</option>
@@ -282,6 +282,27 @@
         <!--What makes us different-->
         <section class="section-98 section-sm-110">
           <div class="shell">
+            <div class="offset-top-60 text-left">
+              <h5>Meet your Doctor</h5>
+              <div class="row">
+                <div class="col-md-3">
+                  <img src="images/gallery/doctor.jpg" class="unit-left">
+                </div>
+                <div class="col-md-9 offset-top-20">
+                  <h4>Ricky Baker M.D., F.A.C.S.</h4>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper sit. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque.<br>
+Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan.</p>
+                  <div class="offset-top-20">
+                    <h6><a href="">Read More »</a></h6>
+                  </div>
+                </div>
+                <div class="col-md-12 offset-top-60 shell advert" style="background-image: url(images/backgrounds/implants.jpg);">
+                   <h5 style="font-weight:900;">Breast Augmentation</h5>
+                   <p class="offset-top-10" style="max-width: 500px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper sit. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque.</p>
+                   <div class="offset-top-30"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
+                </div>
+              </div>
+            </div>
             <h3>What makes us different</h3>
             <hr class="text-java divider-custom">
             <div class="range offset-top-60">
