saving before checking out a bug

--- a/about.html
+++ b/about.html
@@ -154,6 +154,44 @@
         <!-- Our Achievements-->
         <section class="text-sm-left bg-white-liac">
           <div class="shell-wide">
+          <h3>What makes us different</h3>
+            <hr class="text-java divider-custom">
+            <div class="range offset-top-60">
+              <div class="cell-md-4">
+                        <!-- Icon Box Type 2-->
+                <div class="unit unit-sm unit-sm-horizontal unit-spacing-sm text-sm-left">
+                  <div class="unit-left"><span class="icon icon icon-lg icon-default icon-pills-01"></span></div>
+                  <div class="unit-body">
+                    <h5 class="text-bold text-bold text-primary">Modern Equipment</h5>
+                    <p>We use the latest medical equipment to deliver top-class cosmetic surgery services.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="cell-md-4 offset-top-50 offset-md-top-0">
+                        <!-- Icon Box Type 2-->
+                <div class="unit unit-sm unit-sm-horizontal unit-spacing-sm text-sm-left">
+                  <div class="unit-left"><span class="icon icon icon-lg icon-default icon-doctor-01"></span></div>
+                    <div class="unit-body">
+                      <h5 class="text-bold text-bold text-primary">Qualified Doctors and Staff</h5>
+                      <p>Our team consists of more than 20 professionals who are highly trained to serve our patients’ needs.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="cell-md-4 offset-top-50 offset-md-top-0">
+                        <!-- Icon Box Type 2-->
+                  <div class="unit unit-sm unit-sm-horizontal unit-spacing-sm text-sm-left">
+                    <div class="unit-left"><span class="icon icon icon-lg icon-default icon-medical-car-01"></span></div>
+                    <div class="unit-body">
+                      <h5 class="text-bold text-bold text-primary">Effective Results</h5>
+                      <p>The skills of our surgeons and efficient treatment bring the desired results our clients expect.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+        </section>
+            <section class="text-sm-left bg-white-liac">
+            <div class="shell-wide">
             <div class="range range-xs-center">
               <div class="cell-lg-5 cell-xl-4 section-90 section-md-122 context-md-dark bg-image-md-fullwidth-1 bg-image-md-fullwidth-1-left veil reveal-lg-block"></div>
               <div class="cell-sm-10 cell-md-12 cell-lg-7 cell-xl-8 section-85">
