menubar is cleaner now

--- a/index.html
+++ b/index.html
@@ -30,12 +30,9 @@
           <nav data-md-device-layout="rd-navbar-fixed" data-lg-device-layout="rd-navbar-static" class="rd-navbar rd-navbar-minimal rd-navbar-light" data-lg-auto-height="true" data-md-layout="rd-navbar-static" data-lg-layout="rd-navbar-static" data-lg-stick-up="true">
             <div class="rd-navbar-inner">
               <div class="rd-navbar-top-panel">
-                <div class="cell-md-4 offset-top-55 offset-md-top-0 cell-md-push-3 text-md-left">
-                <p> </p>
-                </div>
                 <!--Navbar Brand-->
-                <div class="cell-md-4 rd-navbar-brand veil reveal-md-inline-block"><a href="index.html"><img width='203' height='70' class='img-responsive' src='images/logo-dark.png' alt=''/></a></div>
-                <div class="cell-md-4 text-md-right purplemediabox">
+                <div class="col-md-12 rd-navbar-brand veil reveal-md-inline-block"><a href="index.html"><img width='203' height='70' class='img-responsive' src='images/logo-dark.png' alt=''/></a></div>
+                <div class="cell-md-12 text-md-right purplemediabox">
                   <ul class="list-inline">
                     <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-gray-light"></a></li>
                     <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light"></a></li>
