new bug, gotta go figure out what went wrong

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-gray-light"></a></li>
                     <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light"></a></li>
                     <li><a href="http://instagram.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-gray-light"></a></li>
-                    <li><a href="http://instagram.com" class="icon fa fa-linkedin icon-xxs icon-circle icon-gray-light"></a></li>                 
+                    <li><a href="http://linkedin.com" class="icon fa fa-linkedin icon-xxs icon-circle icon-gray-light"></a></li>                 
                   </ul>
                 </div>
               </div>
@@ -305,37 +305,59 @@ Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsa
       </main>
       <!-- Page Footer-->
       <!-- Default footer-->
-      <footer class="section-relative section-34 section-md-66 page-footer bg-white context-light">
-        <div class="shell">
-          <div class="inset-xl-left-30">
-            <div class="range range-sm-center">
-              <div class="cell-sm-8 cell-md-12">
-                <div class="range range-md-justify range-md-middle">
-                  <div class="cell-md-3 offset-top-55 offset-md-top-0 cell-md-push-3 text-md-right">
-                    <ul class="list-inline">
-                      <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-gray-light"></a></li>
-                      <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light"></a></li>
-                      <li><a href="http://instagram.com" class="icon fa fa-instagram icon-xxs icon-circle icon-gray-light"></a></li>      
-                    </ul>
-                  </div>
-                  <div class="cell-md-3 offset-top-55 offset-md-top-0 cell-md-push-3 text-md-right">
-                    <ul class="list-inline">
-                      <li class="active"><a href="index.html"><span>Home</span></a></li>
-                      <li><a href="about.html"><span>About</span></a></li>
-                      <li><a href="our-team.html"><span>Doctors</span></a></li>
-                      <li><a href="services.html"><span>Procedures</span></a></li>
-                      <li><a href="grid-gallery.html"><span>Gallery</span></a></li>
-                      <li><a href="testimonials.html"><span>Testimonials</span></a></li>
-                      <li><a href="contacts.html"><span>Contacts</span></a></li>
-                    </ul>
-                  </div>
-                  <div class="cell-md-5 offset-top-55 offset-md-top-0 cell-md-push-2">
-                    <p class="text-gray">&copy; <span id="copyright-year"></span> All Rights Reserved. <a href="privacy.html" class="text-gray">Terms of Use and Privacy Policy</a></p>
-                  </div>
-                </div>
-              </div>
+      <footer class="section-relative page-footer bg-white context-light">
+        <div>
+          <div class="pinkfooter">
+            <div class="col-md-12 text-md-center offset-top-20">
+              <ul class="list-inline">
+                <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-darker"></a></li>
+                <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-darker"></a></li>
+                <li><a href="http://instagram.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-darker"></a></li>
+                <li><a href="http://linkedin.com" class="icon fa fa-linkedin icon-xxs icon-circle icon-darker"></a></li>                 
+              </ul>
+            </div>
+            <div class="col-md-12 text-md-center offset-top-20">
+              <ul class="list-inline footer-link">
+                <li><a href="about.html">About</a>
+                </li>
+                <li><a href="our-team.html">Doctors</a>
+                </li>
+                <li><a href="services.html">Procedures</a>
+                </li>
+                <li><a href="grid-gallery.html">Gallery</a>
+                </li>
+                <li><a href="testimonials.html">Testimonials</a>
+                </li>
+                <li><a href="costs.html">Costs</a>
+                </li>
+                <li><a href="appointments.html">Appointments</a>
+                </li>      
+                <li><a href="contacts.html">Contacts</a>
+                </li>
+                <li><a href="privacy.html">Privacy Policy</a>
+                </li>
+                <li><a href="sitemap.html">Site Map</a>
+                </li>
+                <li><a href="disclaimer.html">Disclaimer</a>
+                </li>
+              </ul>
             </div>
           </div>
+          <div class="purplefooter">
+            <div class="col-md-4 text-md-center offset-top-20">
+              <a href="index.html"><img width='203' height='70' class='img-responsive' src='images/logo.png' alt=''/></a>
+            </div>
+            <div class="col-md-4 text-md-center offset-top-20">
+              <p class="text-white">75 Arlington St. - Ste. 500 - Boston, MA 02116<br><a class="text-white" href="tel:555-555-1212">P: 617.987.5564</a> - &copy; <span id="copyright-year"></span> All Rights Reserved.</p>
+            </div>
+            <div class="col-md-4 text-md-center offset-top-20">
+              <ul class="list-inline">
+                <li><img class='img-responsive association' src='images/association1.jpg' alt=''/></li>
+                <li><img class='img-responsive association' src='images/association2.jpg' alt=''/></li>
+                <li><img class='img-responsive association' src='images/association3.jpg' alt=''/></li>                 
+              </ul>
+            </div>
+          </div>  
         </div>
       </footer>
       
