--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <main class="page-content">
         <!--Sheldue-->
         <section class="rd-parallax">
-          <div data-speed="0.2" data-type="media" data-url="images/backgrounds/background-03-1920x537.jpg" class="rd-parallax-layer"></div>
+          <div data-speed="0.2" data-type="media" class="rd-parallax-layer"></div>
           <div data-speed="0" data-type="html" class="rd-parallax-layer section-20 section-sm-20">
             <div class="shell text-right">
               <div class="range range-xs-center range-md-right">
@@ -125,7 +125,7 @@
                     <div class="lighttransparent womanbody offset-top-20">
                         <h5 class="text-primary">What We Can Do For You</h5>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-                        <ul>
+                        <ul class="bullets">
                           <li>Lorem Ipsum</li>
                           <li>Proin Gravida</li>
                           <li>Veil Elit</li>
@@ -277,9 +277,9 @@
           </div>
         </section>
         <!--What makes us different-->
-        <section class="section-98 section-sm-110">
+        <section class="section-50">
           <div class="shell">
-            <div class="offset-top-60 text-left">
+            <div class="offset-top-0 text-left">
               <h5>Meet your Doctor</h5>
               <div class="row">
                 <div class="col-md-3">
