--- a/index.html
+++ b/index.html
@@ -109,9 +109,8 @@
       <!-- Page Contents-->
       <main class="page-content">
         <!--Sheldue-->
-        <section class="rd-parallax">
-          <div data-speed="0.2" data-type="media" class="rd-parallax-layer"></div>
-          <div data-speed="0" data-type="html" class="rd-parallax-layer section-20 section-sm-20">
+        <section class="rdparallax">
+          <div class="rdparallaxlayer section-20 section-sm-20">
             <div class="shell text-right">
               <div class="range range-xs-center range-md-right">
                 <div class="cell-sm-10 cell-md-8 cell-lg-6">
