every page has header and footer, done for the day

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
                       
                       <li><a href="grid-gallery.html"><span>Gallery</span></a>
                       </li>
+
+                      <li><a href="costs.html"><span>Costs</span></a>
+                      </li>
               
                       <li><a href="testimonials.html"><span>Testimonials</span></a>
                       </li>
