--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en" class="wide wow-animation smoothscroll scrollTo">
   <head>
     <!-- Site Title-->
-    <title>Visage plastic surgery</title>
+    <title>Morela plastic surgery</title>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="keywords" content="Visage design multipurpose template">
     <meta name="date" content="Dec 26">
-    <link rel="icon" href="images/favicon.jpg" type="image/x-icon">
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <!-- Stylesheets-->
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -285,7 +285,7 @@
               <h5>Meet your Doctor</h5>
               <div class="row">
                 <div class="col-md-3">
-                  <img src="images/gallery/doctor.jpg" class="unit-left">
+                  <img src="images/gallery/doctor.jpg" class="unit-left offset-top-20">
                 </div>
                 <div class="col-md-9 offset-top-20">
                   <h4>Ricky Baker M.D., F.A.C.S.</h4>
