team, team member, about and index done and donezo

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                       </li>
                       <li class="active"><a href="about.html"><span>About</span></a>
                       </li>
-                      <li><a href="our-team.html"><span>Doctors</span></a>
+                      <li><a href="our-team.html"><span>Team</span></a>
                       <ul class="rd-navbar-dropdown">
                           <li><a href="team-member.html"><span class="text-middle">Dr John Doe</span></a>
                           </li>
@@ -111,7 +111,7 @@
       <main class="page-content">
         <!--Sheldue-->
         <section class="rdparallax">
-          <div class="rdparallaxlayer section-20 section-sm-20">
+          <div class="rdparallaxlayer  section-66 section-sm-66">
             <div class="shell text-right">
               <div class="range range-xs-center range-md-right">
                 <div class="cell-sm-10 cell-md-8 cell-lg-6">
@@ -194,18 +194,56 @@
           </div>
         </section>
         <section class="rdparallax">
-          <div class="rdparallaxlayer section-20 section-sm-20">
-            <div class="row">
-              <div class="col-md-4 team-member">
-                <img class="img-responsive" src="images/pages/our-team-07-384x410.jpg">
+          <div class="rdparallaxlayer section-66 section-sm-66">
+            <div class="shell">
+              <div class="row">
+                <div class="col-md-4">
+                  <img class="img-responsive team-member" src="images/pages/our-team-07-384x410.jpg">
+                  <div class="lighttransparent offset-top-20">
+                    <h5>Ricky Baker</h5>
+                    <p class="offset-top-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <ul class="bullets">
+                      <li>Lorem Ipsum</li>
+                      <li>Proin Gravida</li>
+                      <li>Veil Elit</li>
+                      <li>Inceptos Quam</li>
+                      <li>Orci Enim</li>
+                    </ul>
+                    <div class="offset-top-20"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <img class="img-responsive team-member" src="images/pages/our-team-08-384x410.jpg">
+                  <div class="lighttransparent offset-top-20">
+                    <h5>Ricky Baker</h5>
+                    <p class="offset-top-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <ul class="bullets">
+                      <li>Lorem Ipsum</li>
+                      <li>Proin Gravida</li>
+                      <li>Veil Elit</li>
+                      <li>Inceptos Quam</li>
+                      <li>Orci Enim</li>
+                    </ul>
+                    <div class="offset-top-20"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <img class="img-responsive team-member" src="images/pages/our-team-09-384x410.jpg">
+                  <div class="lighttransparent offset-top-20">
+                    <h5>Ricky Baker</h5>
+                    <p class="offset-top-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <ul class="bullets">
+                      <li>Lorem Ipsum</li>
+                      <li>Proin Gravida</li>
+                      <li>Veil Elit</li>
+                      <li>Inceptos Quam</li>
+                      <li>Orci Enim</li>
+                    </ul>
+                    <div class="offset-top-20"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
+                  </div>
+                </div>
               </div>
-              <div class="col-md-4 team-member">
-                <img class="img-responsive" src="images/pages/our-team-07-384x410.jpg">
-              </div>
-              <div class="col-md-4 team-member">
-                <img class="img-responsive" src="images/pages/our-team-07-384x410.jpg">
-              </div>
-            </div>
+            </div> 
           </div>
         </section>
       </main>
@@ -226,7 +264,7 @@
               <ul class="list-inline footer-link">
                 <li><a href="about.html">About</a>
                 </li>
-                <li><a href="our-team.html">Doctors</a>
+                <li><a href="our-team.html">Team</a>
                 </li>
                 <li><a href="services.html">Procedures</a>
                 </li>
