--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                       </li>
                       <li><a href="about.html"><span>About</span></a>
                       </li>
-                      <li><a href="our-team.html"><span>Doctors</span></a>
+                      <li><a href="our-team.html"><span>Team</span></a>
                       <ul class="rd-navbar-dropdown">
                           <li><a href="team-member.html"><span class="text-middle">Dr John Doe</span></a>
                           </li>
@@ -113,7 +113,7 @@
       <main class="page-content">
         <!--Sheldue-->
         <section class="rdparallax">
-          <div class="rdparallaxlayer section-20 section-sm-20">
+          <div class="rdparallaxlayer section-66 section-sm-66">
             <div class="shell text-right">
               <div class="range range-xs-center range-md-right">
                 <div class="cell-sm-10 cell-md-8 cell-lg-6">
@@ -322,7 +322,7 @@ Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsa
               <ul class="list-inline footer-link">
                 <li><a href="about.html">About</a>
                 </li>
-                <li><a href="our-team.html">Doctors</a>
+                <li><a href="our-team.html">Team</a>
                 </li>
                 <li><a href="services.html">Procedures</a>
                 </li>
