saving before messing with the nav boxes on procedures page

--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="keywords" content="Visage design multipurpose template">
     <meta name="date" content="Dec 26">
-    <link rel="icon" href="images/favicon.jpg" type="image/x-icon">
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <!-- Stylesheets-->
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -57,11 +57,11 @@
                     
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
-                      <li class="active"><a href="index.html"><span>Home</span></a>
+                      <li><a href="index.html"><span>Home</span></a>
                       </li>
                       <li><a href="about.html"><span>About</span></a>
                       </li>
-                      <li><a href="our-team.html"><span>Doctors</span></a>
+                      <li><a href="our-team.html"><span>Team</span></a>
                       <ul class="rd-navbar-dropdown">
                           <li><a href="team-member.html"><span class="text-middle">Dr John Doe</span></a>
                           </li>
@@ -73,7 +73,7 @@
                           </li>
                         </ul>
                       </li>
-                      <li><a href="services.html"><span>Procedures</span></a>
+                      <li class="active"><a href="services.html"><span>Procedures</span></a>
                       <ul class="rd-navbar-dropdown">
                           <li><a href="procedure.html"><span class="text-middle">Dr John Doe</span></a>
                           </li>
@@ -108,16 +108,37 @@
         </div>
       </header>
       <!-- Modern Breadcrumbs-->
-      <section class="breadcrumb-modern context-dark text-md-left">
-        <div class="shell section-34 section-md-top-110 section-md-bottom-41">
-          <h1>Procedures</h1>
-          <ul class="list-inline list-inline-arrows p offset-top-34 offset-md-top-70">
-            <li><a href="index.html" class="text-primary">Home</a></li>
-            <li>Procedures
-            </li>
-          </ul>
-        </div>
-      </section>
+      <section class="rdparallax">
+          <div class="rdparallaxlayer  section-66 section-sm-66">
+            <div class="shell">
+              <div class="lighttransparent offset-top-20">
+                <ul class="nav nav-pills">
+                  <li role="presentation" class="active"><a href="facelift">Facelift</a></li>
+                  <li role="presentation"><a href="tummy-tuck">Tummy Tuck</a></li>
+                  <li role="presentation"><a href="liposuction">Liposuction</a></li>
+                  <li role="presentation"><a href="tummy-tuck">Breast Augmentation</a></li>
+                  <li role="presentation"><a href="liposuction">Breast Reduction</a></li>
+                  <li role="presentation"><a href="tummy-tuck">Breast Reconstruction</a></li>
+                  <li role="presentation"><a href="liposuction">Rhinoplasty</a></li>
+                </ul>
+                <div class="tab-content">
+                  <div id="facelift" class="tab-pane fade in active">
+                    <h3>HOME</h3>
+                    <p>Some content.</p>
+                  </div>
+                  <div id="tummy-tuck" class="tab-pane fade">
+                    <h3>Menu 1</h3>
+                    <p>Some content in menu 1.</p>
+                  </div>
+                  <div id="liposuction" class="tab-pane fade">
+                    <h3>Menu 2</h3>
+                    <p>Some content in menu 2.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       <!-- Page Content-->
       <main class="page-content section-98 section-sm-top-85 section-sm-bottom-200">
         <!--services-->
@@ -255,7 +276,7 @@
               <ul class="list-inline footer-link">
                 <li><a href="about.html">About</a>
                 </li>
-                <li><a href="our-team.html">Doctors</a>
+                <li><a href="our-team.html">Team</a>
                 </li>
                 <li><a href="services.html">Procedures</a>
                 </li>
