done! at least on firefox, troubleshooting with chrome and safari

--- a/testimonials.html
+++ b/testimonials.html
@@ -127,7 +127,8 @@
                 });
               </script>
               <div class="offset-top-60 lighttransparent">
-                <div class="carousel slide" id="myCarousel">
+                <h5 class="offset-top-0">Testimonials</h5>
+                <div class="offset-top-20 carousel slide" id="myCarousel">
                   <div class="carousel-inner">
                     <div class="item active">
                       <ul class="thumbnails">
@@ -210,10 +211,10 @@
                       </ul>
                     </div><!-- /Slide2 --> 
                   </div>
-                  <nav class="offset-top-60">
+                  <nav class="offset-top-50">
                     <ul class="control-box pager">
-                                    <li><a data-slide="prev" href="#myCarousel"><i class="glyphicon glyphicon-chevron-left"></i></a></li>
-                                    <li><a data-slide="next" href="#myCarousel"><i class="glyphicon glyphicon-chevron-right"></i></a></li>
+                      <li><a data-slide="prev" href="#myCarousel"><i class="glyphicon glyphicon-chevron-left"></i></a></li>
+                      <li><a data-slide="next" href="#myCarousel"><i class="glyphicon glyphicon-chevron-right"></i></a></li>
                     </ul>
                   </nav>
                              <!-- /.control-box -->                          
