fixed the pesky selection thing

--- a/our-team.html
+++ b/our-team.html
@@ -63,13 +63,13 @@
                       </li>
                       <li class="active"><a href="our-team.html"><span>Team</span></a>
                       <ul class="rd-navbar-dropdown">
+                          <li><a href="team-member.html"><span class="text-middle">Dr Ricky Baker</span></a>
+                          </li>
                           <li><a href="team-member.html"><span class="text-middle">Dr John Doe</span></a>
                           </li>
-                          <li><a href="team-member.html"><span class="text-middle">Dr Cristina Bozas</span></a>
+                          <li><a href="team-member.html"><span class="text-middle">Dr Staci Curtis</span></a>
                           </li>
-                          <li><a href="team-member.html"><span class="text-middle">Dr Christian Portland</span></a>
-                          </li>
-                          <li><a href="team-member.html"><span class="text-middle">Dr Kent</span></a>
+                          <li><a href="team-member.html"><span class="text-middle">Dr Betty Smith</span></a>
                           </li>
                         </ul>
                       </li>
